--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <style type="stylesheet/css" src="assets/css/reset.css"></style>
-    <style type="stylesheet/css" src="assets/css/style.css"></style>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Crystals</title>
     
 
@@ -15,11 +15,11 @@
 
 <body>
     <container>
-        <div id="header">Header</div>
-        <div id="instructions">Instructions</div>
+        <div id="header"><strong>Digging up a Fortune</strong></div>
+        <div id="instructions"><p>Instruction:</p><p>Your goal will be selected randomly. Pick a crystal to click. Each crystal will have a random value at the begining of the game. To win pick crystals to add to the goal. Going over will be a loss. Have fun! </p></div>
         <div id="crystals"></div>
         <div id="score"></div>
-        <div id="goal"></div>
+        <div id="goal"><p>Goal</p></div>
         <div id="wins-losses">
             <p>Wins:<span id="Wins"></span></p>
             <p>Losses:<span id="losses"></span></p>
@@ -34,9 +34,12 @@
 
 
 
-
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
-
+    
 </body>
 
 </html>
