--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Crystals</title>
-    
+
 
 
 </head>
@@ -16,14 +16,26 @@
 <body>
     <container>
         <div id="header"><strong>Digging up a Fortune</strong></div>
-        <div id="instructions"><p>Instruction:</p><p>Your goal will be selected randomly. Pick a crystal to click. Each crystal will have a random value at the begining of the game. To win pick crystals to add to the goal. Going over will be a loss. Have fun! </p></div>
+        <div id="instructions">
+            <p>Instruction:</p>
+            <p>Your goal will be selected randomly. Pick a crystal to click. Each crystal will have a random value at
+                the begining of the game. To win pick crystals to add to the goal. Going over will be a loss. Have fun!
+            </p>
+        </div>
         <div id="crystals"></div>
         <div id="score"></div>
-        <div id="goal"><p>Goal</p></div>
-        <div id="wins-losses">
-            <p>Wins:<span id="Wins"></span></p>
-            <p>Losses:<span id="losses"></span></p>
+        <div id="goal">
+            <p>Goal</p>
         </div>
+        <div>
+            <p>Wins:</p>
+            <p id="wins"></p>
+        </div>
+        <div>
+            <p>Losses:</p>
+            <p id="losses"></p>
+        </div>
+
 
 
 
@@ -34,12 +46,10 @@
 
 
 
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
-    
+
 </body>
 
 </html>
